[metadata]
name = cs5260
provides = cs5260
version = 0.0.2
description = Code for Final Project for CS 5260 at Vanderbilt University
long_description = file: README.rst
long_description_content_type = text/markdown
author = Brian Goldsmith
author_email = brian.d.goldsmith@vanderbilt.edu
maintainer = Brian Goldsmith
maintainer_email = brian.d.goldsmith@vanderbilt.edu
license = GPL 3
license_files = LICENSE
url = https://github.com/bdg221/CS5260
download_url = https://github.com/bdg221/CS5260
project_urls =
   Source = https://github.com/bdg221/CS5260
classifiers =
   Environment :: Console
   Environment :: Other Environment
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
   Operating System :: POSIX :: Linux
   Operating System :: MacOS :: MacOS X
   Operating System :: Microsoft :: Windows
   Intended Audience :: Science/Research
   Natural Language :: English
platforms = Linux, Darwin, Windows
readme = README.rst

[options]
zip_safe = True
include_package_data = False
package_dir =
   = src
packages = find:
python_requires = >=3.8, <3.12
setup_requires =
   setuptools
   wheel

[options.packages.find]
where = src
